--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "express-validator": "^7.0.1",
     "firebase": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
-    "momment": "^0.0.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
